--- a/settings.gradle
+++ b/settings.gradle
@@ -12,6 +12,7 @@ include ":app:test_plugins"
 include "example-plugins"
 include "example-plugins:custom-data-and-widget"
 include "example-plugins:custom-theme"
+include "example-plugins:xbox-controller-state"
 include "integ_test"
 include ":plugins:base"
 include ":plugins:cameraserver"
